@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2016, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2020, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,20 +27,10 @@
  * ---------------------------
  * DefaultKeyedValuesTest.java
  * ---------------------------
- * (C) Copyright 2003-2016, by Object Refinery Limited.
+ * (C) Copyright 2003-2020, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
- *
- * Changes
- * -------
- * 05-Mar-2003 : Version 1 (DG);
- * 27-Aug-2003 : Moved SortOrder from org.jfree.data --> org.jfree.util (DG);
- * 31-Jul-2006 : Added test for new clear() method (DG);
- * 01-Aug-2006 : Extended testGetIndex() method (DG);
- * 30-Apr-2007 : Added some new tests (DG);
- * 03-Oct-2007 : Updated testRemoveValue() (DG);
- * 21-Nov-2007 : Added testGetIndex2() method (DG);
  *
  */
 
@@ -52,6 +42,7 @@ import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNull;
 import org.jfree.chart.TestUtils;
+import org.jfree.chart.util.CloneUtils;
 import org.jfree.chart.util.SortOrder;
 import org.junit.Test;
 
@@ -65,7 +56,7 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testConstructor() {
-        DefaultKeyedValues d = new DefaultKeyedValues();
+        DefaultKeyedValues<String> d = new DefaultKeyedValues<>();
         assertEquals(0, d.getItemCount());
     }
 
@@ -74,7 +65,7 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testGetItemCount() {
-        DefaultKeyedValues d = new DefaultKeyedValues();
+        DefaultKeyedValues<String> d = new DefaultKeyedValues<>();
         assertEquals(0, d.getItemCount());
         d.addValue("A", 1.0);
         assertEquals(1, d.getItemCount());
@@ -89,8 +80,8 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testGetKeys() {
-        DefaultKeyedValues d = new DefaultKeyedValues();
-        List keys = d.getKeys();
+        DefaultKeyedValues<String> d = new DefaultKeyedValues<>();
+        List<String> keys = d.getKeys();
         assertTrue(keys.isEmpty());
         d.addValue("A", 1.0);
         keys = d.getKeys();
@@ -111,7 +102,7 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testClear() {
-        DefaultKeyedValues v1 = new DefaultKeyedValues();
+        DefaultKeyedValues<String> v1 = new DefaultKeyedValues<>();
         v1.addValue("A", 1.0);
         v1.addValue("B", 2.0);
         assertEquals(2, v1.getItemCount());
@@ -124,7 +115,7 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testGetValue() {
-        DefaultKeyedValues v1 = new DefaultKeyedValues();
+        DefaultKeyedValues<String> v1 = new DefaultKeyedValues<>();
         try {
             /* Number n = */ v1.getValue(-1);
             assertTrue(false);
@@ -139,11 +130,11 @@ public class DefaultKeyedValuesTest {
         catch (IndexOutOfBoundsException e) {
             // expected
         }
-        DefaultKeyedValues v2 = new DefaultKeyedValues();
-        v2.addValue("K1", new Integer(1));
-        v2.addValue("K2", new Integer(2));
-        v2.addValue("K3", new Integer(3));
-        assertEquals(new Integer(3), v2.getValue(2));
+        DefaultKeyedValues<String> v2 = new DefaultKeyedValues<>();
+        v2.addValue("K1", Integer.valueOf(1));
+        v2.addValue("K2", Integer.valueOf(2));
+        v2.addValue("K3", Integer.valueOf(3));
+        assertEquals(3, v2.getValue(2));
 
         boolean pass = false;
         try {
@@ -160,7 +151,7 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testGetKey() {
-        DefaultKeyedValues v1 = new DefaultKeyedValues();
+        DefaultKeyedValues<String> v1 = new DefaultKeyedValues<>();
         try {
             /* Comparable k = */ v1.getKey(-1);
             assertTrue(false);
@@ -175,10 +166,10 @@ public class DefaultKeyedValuesTest {
         catch (IndexOutOfBoundsException e) {
             // expected
         }
-        DefaultKeyedValues v2 = new DefaultKeyedValues();
-        v2.addValue("K1", new Integer(1));
-        v2.addValue("K2", new Integer(2));
-        v2.addValue("K3", new Integer(3));
+        DefaultKeyedValues<String> v2 = new DefaultKeyedValues<>();
+        v2.addValue("K1", 1);
+        v2.addValue("K2", 2);
+        v2.addValue("K3", 3);
         assertEquals("K2", v2.getKey(1));
     }
 
@@ -187,13 +178,13 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testGetIndex() {
-        DefaultKeyedValues v1 = new DefaultKeyedValues();
+        DefaultKeyedValues<String> v1 = new DefaultKeyedValues<>();
         assertEquals(-1, v1.getIndex("K1"));
 
-        DefaultKeyedValues v2 = new DefaultKeyedValues();
-        v2.addValue("K1", new Integer(1));
-        v2.addValue("K2", new Integer(2));
-        v2.addValue("K3", new Integer(3));
+        DefaultKeyedValues<String> v2 = new DefaultKeyedValues<>();
+        v2.addValue("K1", 1);
+        v2.addValue("K2", 2);
+        v2.addValue("K3", 3);
         assertEquals(2, v2.getIndex("K3"));
 
         // try null
@@ -212,7 +203,7 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testGetIndex2() {
-        DefaultKeyedValues v = new DefaultKeyedValues();
+        DefaultKeyedValues<String> v = new DefaultKeyedValues<>();
         assertEquals(-1, v.getIndex("K1"));
         v.addValue("K1", 1.0);
         assertEquals(0, v.getIndex("K1"));
@@ -224,13 +215,13 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testAddValue() {
-        DefaultKeyedValues v1 = new DefaultKeyedValues();
+        DefaultKeyedValues<String> v1 = new DefaultKeyedValues<>();
         v1.addValue("A", 1.0);
-        assertEquals(new Double(1.0), v1.getValue("A"));
+        assertEquals(1.0, v1.getValue("A"));
         v1.addValue("B", 2.0);
-        assertEquals(new Double(2.0), v1.getValue("B"));
+        assertEquals(2.0, v1.getValue("B"));
         v1.addValue("B", 3.0);
-        assertEquals(new Double(3.0), v1.getValue("B"));
+        assertEquals(3.0, v1.getValue("B"));
         assertEquals(2, v1.getItemCount());
         v1.addValue("A", null);
         assertNull(v1.getValue("A"));
@@ -251,24 +242,24 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testInsertValue() {
-        DefaultKeyedValues v1 = new DefaultKeyedValues();
+        DefaultKeyedValues<String> v1 = new DefaultKeyedValues<>();
         v1.insertValue(0, "A", 1.0);
-        assertEquals(new Double(1.0), v1.getValue(0));
+        assertEquals(1.0, v1.getValue(0));
         v1.insertValue(0, "B", 2.0);
-        assertEquals(new Double(2.0), v1.getValue(0));
-        assertEquals(new Double(1.0), v1.getValue(1));
+        assertEquals(2.0, v1.getValue(0));
+        assertEquals(1.0, v1.getValue(1));
 
         // it's OK to use an index equal to the size of the list
         v1.insertValue(2, "C", 3.0);
-        assertEquals(new Double(2.0), v1.getValue(0));
-        assertEquals(new Double(1.0), v1.getValue(1));
-        assertEquals(new Double(3.0), v1.getValue(2));
+        assertEquals(2.0, v1.getValue(0));
+        assertEquals(1.0, v1.getValue(1));
+        assertEquals(3.0, v1.getValue(2));
 
         // try replacing an existing value
         v1.insertValue(2, "B", 4.0);
-        assertEquals(new Double(1.0), v1.getValue(0));
-        assertEquals(new Double(3.0), v1.getValue(1));
-        assertEquals(new Double(4.0), v1.getValue(2));
+        assertEquals(1.0, v1.getValue(0));
+        assertEquals(3.0, v1.getValue(1));
+        assertEquals(4.0, v1.getValue(2));
     }
 
     /**
@@ -276,17 +267,17 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testCloning() throws CloneNotSupportedException {
-        DefaultKeyedValues v1 = new DefaultKeyedValues();
-        v1.addValue("V1", new Integer(1));
+        DefaultKeyedValues<String> v1 = new DefaultKeyedValues<>();
+        v1.addValue("V1", 1);
         v1.addValue("V2", null);
-        v1.addValue("V3", new Integer(3));
-        DefaultKeyedValues v2 = (DefaultKeyedValues) v1.clone();
+        v1.addValue("V3", 3);
+        DefaultKeyedValues<String> v2 = CloneUtils.clone(v1);
         assertTrue(v1 != v2);
         assertTrue(v1.getClass() == v2.getClass());
         assertTrue(v1.equals(v2));
 
         // confirm that the clone is independent of the original
-        v2.setValue("V1", new Integer(44));
+        v2.setValue("V1", 44);
         assertFalse(v1.equals(v2));
     }
 
@@ -296,10 +287,10 @@ public class DefaultKeyedValuesTest {
     @Test
     public void testInsertAndRetrieve() {
 
-        DefaultKeyedValues data = new DefaultKeyedValues();
-        data.addValue("A", new Double(1.0));
-        data.addValue("B", new Double(2.0));
-        data.addValue("C", new Double(3.0));
+        DefaultKeyedValues<String> data = new DefaultKeyedValues<>();
+        data.addValue("A", 1.0);
+        data.addValue("B", 2.0);
+        data.addValue("C", 3.0);
         data.addValue("D", null);
 
         // check key order
@@ -309,15 +300,15 @@ public class DefaultKeyedValuesTest {
         assertEquals(data.getKey(3), "D");
 
         // check retrieve value by key
-        assertEquals(data.getValue("A"), new Double(1.0));
-        assertEquals(data.getValue("B"), new Double(2.0));
-        assertEquals(data.getValue("C"), new Double(3.0));
+        assertEquals(data.getValue("A"), 1.0);
+        assertEquals(data.getValue("B"), 2.0);
+        assertEquals(data.getValue("C"), 3.0);
         assertEquals(data.getValue("D"), null);
 
         // check retrieve value by index
-        assertEquals(data.getValue(0), new Double(1.0));
-        assertEquals(data.getValue(1), new Double(2.0));
-        assertEquals(data.getValue(2), new Double(3.0));
+        assertEquals(data.getValue(0), 1.0);
+        assertEquals(data.getValue(1), 2.0);
+        assertEquals(data.getValue(2), 3.0);
         assertEquals(data.getValue(3), null);
 
     }
@@ -327,11 +318,11 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testRemoveValue() {
-        DefaultKeyedValues data = new DefaultKeyedValues();
-        data.addValue("A", new Double(1.0));
+        DefaultKeyedValues<String> data = new DefaultKeyedValues<>();
+        data.addValue("A", 1.0);
         data.addValue("B", null);
-        data.addValue("C", new Double(3.0));
-        data.addValue("D", new Double(2.0));
+        data.addValue("C", 3.0);
+        data.addValue("D", 2.0);
         assertEquals(1, data.getIndex("B"));
         data.removeValue("B");
         assertEquals(-1, data.getIndex("B"));
@@ -352,11 +343,11 @@ public class DefaultKeyedValuesTest {
     @Test
     public void testSortByKeyAscending() {
 
-        DefaultKeyedValues data = new DefaultKeyedValues();
-        data.addValue("C", new Double(1.0));
+        DefaultKeyedValues<String> data = new DefaultKeyedValues<>();
+        data.addValue("C", 1.0);
         data.addValue("B", null);
-        data.addValue("D", new Double(3.0));
-        data.addValue("A", new Double(2.0));
+        data.addValue("D", 3.0);
+        data.addValue("A", 2.0);
 
         data.sortByKeys(SortOrder.ASCENDING);
 
@@ -367,16 +358,16 @@ public class DefaultKeyedValuesTest {
         assertEquals(data.getKey(3), "D");
 
         // check retrieve value by key
-        assertEquals(data.getValue("A"), new Double(2.0));
+        assertEquals(data.getValue("A"), 2.0);
         assertEquals(data.getValue("B"), null);
-        assertEquals(data.getValue("C"), new Double(1.0));
-        assertEquals(data.getValue("D"), new Double(3.0));
+        assertEquals(data.getValue("C"), 1.0);
+        assertEquals(data.getValue("D"), 3.0);
 
         // check retrieve value by index
-        assertEquals(data.getValue(0), new Double(2.0));
+        assertEquals(data.getValue(0), 2.0);
         assertEquals(data.getValue(1), null);
-        assertEquals(data.getValue(2), new Double(1.0));
-        assertEquals(data.getValue(3), new Double(3.0));
+        assertEquals(data.getValue(2), 1.0);
+        assertEquals(data.getValue(3), 3.0);
 
     }
 
@@ -386,11 +377,11 @@ public class DefaultKeyedValuesTest {
     @Test
     public void testSortByKeyDescending() {
 
-        DefaultKeyedValues data = new DefaultKeyedValues();
-        data.addValue("C", new Double(1.0));
+        DefaultKeyedValues<String> data = new DefaultKeyedValues<>();
+        data.addValue("C", 1.0);
         data.addValue("B", null);
-        data.addValue("D", new Double(3.0));
-        data.addValue("A", new Double(2.0));
+        data.addValue("D", 3.0);
+        data.addValue("A", 2.0);
 
         data.sortByKeys(SortOrder.DESCENDING);
 
@@ -401,16 +392,16 @@ public class DefaultKeyedValuesTest {
         assertEquals(data.getKey(3), "A");
 
         // check retrieve value by key
-        assertEquals(data.getValue("A"), new Double(2.0));
+        assertEquals(data.getValue("A"), 2.0);
         assertEquals(data.getValue("B"), null);
-        assertEquals(data.getValue("C"), new Double(1.0));
-        assertEquals(data.getValue("D"), new Double(3.0));
+        assertEquals(data.getValue("C"), 1.0);
+        assertEquals(data.getValue("D"), 3.0);
 
         // check retrieve value by index
-        assertEquals(data.getValue(0), new Double(3.0));
-        assertEquals(data.getValue(1), new Double(1.0));
+        assertEquals(data.getValue(0), 3.0);
+        assertEquals(data.getValue(1), 1.0);
         assertEquals(data.getValue(2), null);
-        assertEquals(data.getValue(3), new Double(2.0));
+        assertEquals(data.getValue(3), 2.0);
 
     }
 
@@ -420,11 +411,11 @@ public class DefaultKeyedValuesTest {
     @Test
     public void testSortByValueAscending() {
 
-        DefaultKeyedValues data = new DefaultKeyedValues();
-        data.addValue("C", new Double(1.0));
+        DefaultKeyedValues<String> data = new DefaultKeyedValues<>();
+        data.addValue("C", 1.0);
         data.addValue("B", null);
-        data.addValue("D", new Double(3.0));
-        data.addValue("A", new Double(2.0));
+        data.addValue("D", 3.0);
+        data.addValue("A", 2.0);
 
         data.sortByValues(SortOrder.ASCENDING);
 
@@ -435,15 +426,15 @@ public class DefaultKeyedValuesTest {
         assertEquals(data.getKey(3), "B");
 
         // check retrieve value by key
-        assertEquals(data.getValue("A"), new Double(2.0));
+        assertEquals(data.getValue("A"), 2.0);
         assertEquals(data.getValue("B"), null);
-        assertEquals(data.getValue("C"), new Double(1.0));
-        assertEquals(data.getValue("D"), new Double(3.0));
+        assertEquals(data.getValue("C"), 1.0);
+        assertEquals(data.getValue("D"), 3.0);
 
         // check retrieve value by index
-        assertEquals(data.getValue(0), new Double(1.0));
-        assertEquals(data.getValue(1), new Double(2.0));
-        assertEquals(data.getValue(2), new Double(3.0));
+        assertEquals(data.getValue(0), 1.0);
+        assertEquals(data.getValue(1), 2.0);
+        assertEquals(data.getValue(2), 3.0);
         assertEquals(data.getValue(3), null);
 
     }
@@ -454,11 +445,11 @@ public class DefaultKeyedValuesTest {
     @Test
     public void testSortByValueDescending() {
 
-        DefaultKeyedValues data = new DefaultKeyedValues();
-        data.addValue("C", new Double(1.0));
+        DefaultKeyedValues<String> data = new DefaultKeyedValues<>();
+        data.addValue("C", 1.0);
         data.addValue("B", null);
-        data.addValue("D", new Double(3.0));
-        data.addValue("A", new Double(2.0));
+        data.addValue("D", 3.0);
+        data.addValue("A", 2.0);
 
         data.sortByValues(SortOrder.DESCENDING);
 
@@ -469,15 +460,15 @@ public class DefaultKeyedValuesTest {
         assertEquals(data.getKey(3), "B");
 
         // check retrieve value by key
-        assertEquals(data.getValue("A"), new Double(2.0));
+        assertEquals(data.getValue("A"), 2.0);
         assertEquals(data.getValue("B"), null);
-        assertEquals(data.getValue("C"), new Double(1.0));
-        assertEquals(data.getValue("D"), new Double(3.0));
+        assertEquals(data.getValue("C"), 1.0);
+        assertEquals(data.getValue("D"), 3.0);
 
         // check retrieve value by index
-        assertEquals(data.getValue(0), new Double(3.0));
-        assertEquals(data.getValue(1), new Double(2.0));
-        assertEquals(data.getValue(2), new Double(1.0));
+        assertEquals(data.getValue(0), 3.0);
+        assertEquals(data.getValue(1), 2.0);
+        assertEquals(data.getValue(2), 1.0);
         assertEquals(data.getValue(3), null);
 
     }
@@ -487,13 +478,12 @@ public class DefaultKeyedValuesTest {
      */
     @Test
     public void testSerialization() {
-        DefaultKeyedValues v1 = new DefaultKeyedValues();
-        v1.addValue("Key 1", new Double(23));
+        DefaultKeyedValues<String> v1 = new DefaultKeyedValues<>();
+        v1.addValue("Key 1", 23);
         v1.addValue("Key 2", null);
-        v1.addValue("Key 3", new Double(42));
+        v1.addValue("Key 3", 42);
 
-        DefaultKeyedValues v2 = (DefaultKeyedValues) 
-                TestUtils.serialised(v1);
+        DefaultKeyedValues<String> v2 = TestUtils.serialised(v1);
         assertEquals(v1, v2);
     }
 
