@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2016, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2020, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,20 +27,10 @@
  * -----------------
  * XYSeriesTest.java
  * -----------------
- * (C) Copyright 2003-2016, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2003-2020, by Object Refinery Limited and Contributors.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
- *
- * Changes
- * -------
- * 23-Dec-2003 : Version 1 (DG);
- * 15-Jan-2007 : Added tests for new toArray() method (DG);
- * 30-Jan-2007 : Fixed some code that won't compile with Java 1.4 (DG);
- * 31-Oct-2007 : New hashCode() test (DG);
- * 01-May-2008 : Added testAddOrUpdate3() (DG);
- * 24-Nov-2008 : Added testBug1955483() (DG);
- * 06-Mar-2009 : Added tests for cached bounds values (DG);
  *
  */
 
@@ -50,6 +40,7 @@ import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.assertFalse;
 
 import org.jfree.chart.TestUtils;
+import org.jfree.chart.util.CloneUtils;
 
 import org.jfree.data.general.SeriesException;
 import static org.junit.Assert.assertEquals;
@@ -66,9 +57,9 @@ public class XYSeriesTest {
      */
     @Test
     public void testEquals() {
-        XYSeries s1 = new XYSeries("Series");
+        XYSeries<String> s1 = new XYSeries<>("Series");
         s1.add(1.0, 1.1);
-        XYSeries s2 = new XYSeries("Series");
+        XYSeries<String> s2 = new XYSeries<>("Series");
         s2.add(1.0, 1.1);
         assertTrue(s1.equals(s2));
         assertTrue(s2.equals(s1));
@@ -89,8 +80,8 @@ public class XYSeriesTest {
      */
     @Test
     public void testHashCode() {
-        XYSeries s1 = new XYSeries("Test");
-        XYSeries s2 = new XYSeries("Test");
+        XYSeries<String> s1 = new XYSeries<>("Test");
+        XYSeries<String> s2 = new XYSeries<>("Test");
         assertEquals(s1, s2);
         assertEquals(s1.hashCode(), s2.hashCode());
 
@@ -117,12 +108,13 @@ public class XYSeriesTest {
 
     /**
      * Confirm that cloning works.
+     * @throws java.lang.CloneNotSupportedException
      */
     @Test
     public void testCloning() throws CloneNotSupportedException {
-        XYSeries s1 = new XYSeries("Series");
+        XYSeries<String> s1 = new XYSeries<>("Series");
         s1.add(1.0, 1.1);
-        XYSeries s2 = (XYSeries) s1.clone();
+        XYSeries<String> s2 = CloneUtils.clone(s1);
         assertTrue(s1 != s2);
         assertTrue(s1.getClass() == s2.getClass());
         assertTrue(s1.equals(s2));
@@ -130,14 +122,15 @@ public class XYSeriesTest {
 
     /**
      * Another test of the clone() method.
+     * @throws java.lang.CloneNotSupportedException
      */
     @Test
     public void testCloning2() throws CloneNotSupportedException {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.add(1.0, 100.0);
         s1.add(2.0, null);
         s1.add(3.0, 200.0);
-        XYSeries s2 = (XYSeries) s1.clone();
+        XYSeries<String> s2 = CloneUtils.clone(s1);
         assertTrue(s1.equals(s2));
 
         // check independence
@@ -149,11 +142,12 @@ public class XYSeriesTest {
 
     /**
      * Another test of the clone() method.
+     * @throws java.lang.CloneNotSupportedException
      */
     @Test
     public void testCloning3() throws CloneNotSupportedException {
-        XYSeries s1 = new XYSeries("S1");
-        XYSeries s2 = (XYSeries) s1.clone();
+        XYSeries<String> s1 = new XYSeries<>("S1");
+        XYSeries<String> s2 = CloneUtils.clone(s1);
         assertTrue(s1.equals(s2));
 
         // check independence
@@ -168,9 +162,9 @@ public class XYSeriesTest {
      */
     @Test
     public void testSerialization() {
-        XYSeries s1 = new XYSeries("Series");
+        XYSeries<String> s1 = new XYSeries<>("Series");
         s1.add(1.0, 1.1);
-        XYSeries s2 = (XYSeries) TestUtils.serialised(s1);
+        XYSeries<String> s2 = TestUtils.serialised(s1);
         assertEquals(s1, s2);
     }
 
@@ -179,14 +173,14 @@ public class XYSeriesTest {
      */
     @Test
     public void testIndexOf() {
-        XYSeries s1 = new XYSeries("Series 1");
+        XYSeries<String> s1 = new XYSeries<>("Series 1");
         s1.add(1.0, 1.0);
         s1.add(2.0, 2.0);
         s1.add(3.0, 3.0);
-        assertEquals(0, s1.indexOf(new Double(1.0)));
-        assertEquals(1, s1.indexOf(new Double(2.0)));
-        assertEquals(2, s1.indexOf(new Double(3.0)));
-        assertEquals(-4, s1.indexOf(new Double(99.9)));
+        assertEquals(0, s1.indexOf(1.0));
+        assertEquals(1, s1.indexOf(2.0));
+        assertEquals(2, s1.indexOf(3.0));
+        assertEquals(-4, s1.indexOf(99.9));
     }
 
     /**
@@ -194,13 +188,13 @@ public class XYSeriesTest {
      */
     @Test
     public void testIndexOf2() {
-        XYSeries s1 = new XYSeries("Series 1", false, true);
+        XYSeries<String> s1 = new XYSeries<>("Series 1", false, true);
         s1.add(1.0, 1.0);
         s1.add(3.0, 3.0);
         s1.add(2.0, 2.0);
-        assertEquals(0, s1.indexOf(new Double(1.0)));
-        assertEquals(1, s1.indexOf(new Double(3.0)));
-        assertEquals(2, s1.indexOf(new Double(2.0)));
+        assertEquals(0, s1.indexOf(1.0));
+        assertEquals(1, s1.indexOf(3.0));
+        assertEquals(2, s1.indexOf(2.0));
     }
 
     /**
@@ -209,12 +203,12 @@ public class XYSeriesTest {
      */
     @Test
     public void testIndexOf3() {
-        XYSeries s1 = new XYSeries("Series 1");
+        XYSeries<String> s1 = new XYSeries<>("Series 1");
         s1.add(1.0, 1.0);
         s1.add(2.0, 2.0);
         s1.add(2.0, 3.0);
-        assertEquals(0, s1.indexOf(new Double(1.0)));
-        assertEquals(1, s1.indexOf(new Double(2.0)));
+        assertEquals(0, s1.indexOf(1.0));
+        assertEquals(1, s1.indexOf(2.0));
     }
 
     /**
@@ -222,17 +216,17 @@ public class XYSeriesTest {
      */
     @Test
     public void testRemove() {
-        XYSeries s1 = new XYSeries("Series 1");
+        XYSeries<String> s1 = new XYSeries<>("Series 1");
         s1.add(1.0, 1.0);
         s1.add(2.0, 2.0);
         s1.add(3.0, 3.0);
         assertEquals(3, s1.getItemCount());
 
-        s1.remove(new Double(2.0));
-        assertEquals(new Double(3.0), s1.getX(1));
+        s1.remove(2.0);
+        assertEquals(3.0, s1.getX(1));
 
         s1.remove(0);
-        assertEquals(new Double(3.0), s1.getX(0));
+        assertEquals(3.0, s1.getX(0));
     }
 
     /**
@@ -240,7 +234,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testRemove2() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.add(1.0, 1.1);
         s1.add(2.0, 2.2);
         s1.add(3.0, 3.3);
@@ -269,7 +263,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testAdditionOfDuplicateXValues() {
-        XYSeries s1 = new XYSeries("Series 1");
+        XYSeries<String> s1 = new XYSeries<>("Series 1");
         s1.add(1.0, 1.0);
         s1.add(2.0, 2.0);
         s1.add(2.0, 3.0);
@@ -287,13 +281,13 @@ public class XYSeriesTest {
      */
     @Test
     public void testUpdate() {
-        XYSeries series = new XYSeries("S1");
-        series.add(new Integer(1), new Integer(2));
-        assertEquals(new Integer(2), series.getY(0));
-        series.update(new Integer(1), new Integer(3));
-        assertEquals(new Integer(3), series.getY(0));
+        XYSeries<String> series = new XYSeries<>("S1");
+        series.add(1, Integer.valueOf(2));
+        assertEquals(2, series.getY(0));
+        series.update(1, 3);
+        assertEquals(3, series.getY(0));
         try {
-            series.update(new Integer(2), new Integer(99));
+            series.update(2, 99);
             assertTrue(false);
         }
         catch (SeriesException e) {
@@ -306,12 +300,12 @@ public class XYSeriesTest {
      */
     @Test
     public void testUpdate2() {
-       XYSeries series = new XYSeries("Series", false, true);
+       XYSeries<String> series = new XYSeries<>("Series", false, true);
        series.add(5.0, 55.0);
        series.add(4.0, 44.0);
        series.add(6.0, 66.0);
-       series.update(new Double(4.0), new Double(99.0));
-       assertEquals(new Double(99.0), series.getY(1));
+       series.update(4.0, 99.0);
+       assertEquals(99.0, series.getY(1));
     }
 
     /**
@@ -319,22 +313,22 @@ public class XYSeriesTest {
      */
     @Test
     public void testAddOrUpdate() {
-        XYSeries series = new XYSeries("S1", true, false);
-        XYDataItem old = series.addOrUpdate(new Long(1), new Long(2));
+        XYSeries<String> series = new XYSeries<>("S1", true, false);
+        XYDataItem old = series.addOrUpdate(Long.valueOf(1L), Long.valueOf(2L));
         assertTrue(old == null);
         assertEquals(1, series.getItemCount());
-        assertEquals(new Long(2), series.getY(0));
+        assertEquals(2L, series.getY(0));
 
-        old = series.addOrUpdate(new Long(2), new Long(3));
+        old = series.addOrUpdate(Long.valueOf(2L), Long.valueOf(3L));
         assertTrue(old == null);
         assertEquals(2, series.getItemCount());
-        assertEquals(new Long(3), series.getY(1));
+        assertEquals(3L, series.getY(1));
 
-        old = series.addOrUpdate(new Long(1), new Long(99));
-        assertEquals(new XYDataItem(new Long(1), new Long(2)), old);
+        old = series.addOrUpdate(Long.valueOf(1L), Long.valueOf(99L));
+        assertEquals(new XYDataItem(Long.valueOf(1L), Long.valueOf(2L)), old);
         assertEquals(2, series.getItemCount());
-        assertEquals(new Long(99), series.getY(0));
-        assertEquals(new Long(3), series.getY(1));
+        assertEquals(99L, series.getY(0));
+        assertEquals(3L, series.getY(1));
     }
 
     /**
@@ -342,15 +336,15 @@ public class XYSeriesTest {
      */
     @Test
     public void testAddOrUpdate2() {
-        XYSeries series = new XYSeries("Series", false, false);
+        XYSeries<String> series = new XYSeries<>("Series", false, false);
         series.add(5.0, 5.5);
         series.add(6.0, 6.6);
         series.add(3.0, 3.3);
         series.add(4.0, 4.4);
         series.add(2.0, 2.2);
         series.add(1.0, 1.1);
-        series.addOrUpdate(new Double(3.0), new Double(33.3));
-        series.addOrUpdate(new Double(2.0), new Double(22.2));
+        series.addOrUpdate(3.0, 33.3);
+        series.addOrUpdate(2.0, 22.2);
         assertEquals(33.3, series.getY(2).doubleValue(), EPSILON);
         assertEquals(22.2, series.getY(4).doubleValue(), EPSILON);
     }
@@ -360,13 +354,13 @@ public class XYSeriesTest {
      */
     @Test
     public void testAddOrUpdate3() {
-        XYSeries series = new XYSeries("Series", false, true);
+        XYSeries<String> series = new XYSeries<>("Series", false, true);
         series.addOrUpdate(1.0, 1.0);
         series.addOrUpdate(1.0, 2.0);
         series.addOrUpdate(1.0, 3.0);
-        assertEquals(new Double(1.0), series.getY(0));
-        assertEquals(new Double(2.0), series.getY(1));
-        assertEquals(new Double(3.0), series.getY(2));
+        assertEquals(1.0, series.getY(0));
+        assertEquals(2.0, series.getY(1));
+        assertEquals(3.0, series.getY(2));
         assertEquals(3, series.getItemCount());
     }
 
@@ -375,7 +369,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testAdd() {
-        XYSeries series = new XYSeries("Series", false, true);
+        XYSeries<String> series = new XYSeries<>("Series", false, true);
         series.add(5.0, 5.50);
         series.add(5.1, 5.51);
         series.add(6.0, 6.6);
@@ -397,7 +391,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testSetMaximumItemCount() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         assertEquals(Integer.MAX_VALUE, s1.getMaximumItemCount());
         s1.setMaximumItemCount(2);
         assertEquals(2, s1.getMaximumItemCount());
@@ -413,7 +407,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testSetMaximumItemCount2() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.add(1.0, 1.1);
         s1.add(2.0, 2.2);
         s1.add(3.0, 3.3);
@@ -428,7 +422,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testSetMaximumItemCount3() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.add(1.0, 1.1);
         s1.add(2.0, 2.2);
         s1.add(3.0, 3.3);
@@ -450,7 +444,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testSetMaximumItemCount4() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.setMaximumItemCount(2);
         s1.add(1.0, 1.1);
         s1.add(2.0, 2.2);
@@ -468,7 +462,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testToArray() {
-        XYSeries s = new XYSeries("S1");
+        XYSeries<String> s = new XYSeries<>("S1");
         double[][] array = s.toArray();
         assertEquals(2, array.length);
         assertEquals(0, array[0].length);
@@ -496,12 +490,12 @@ public class XYSeriesTest {
      */
     @Test
     public void testToArrayExample() {
-        XYSeries s = new XYSeries("S");
+        XYSeries<String> s = new XYSeries<>("S");
         s.add(1.0, 11.0);
         s.add(2.0, 22.0);
         s.add(3.5, 35.0);
         s.add(5.0, null);
-        DefaultXYDataset dataset = new DefaultXYDataset();
+        DefaultXYDataset<String> dataset = new DefaultXYDataset<>();
         dataset.addSeries("S", s.toArray());
         assertEquals(1, dataset.getSeriesCount());
         assertEquals(4, dataset.getItemCount(0));
@@ -521,11 +515,11 @@ public class XYSeriesTest {
      */
     @Test
     public void testBug1955483() {
-        XYSeries series = new XYSeries("Series", true, true);
+        XYSeries<String> series = new XYSeries<>("Series", true, true);
         series.addOrUpdate(1.0, 1.0);
         series.addOrUpdate(1.0, 2.0);
-        assertEquals(new Double(1.0), series.getY(0));
-        assertEquals(new Double(2.0), series.getY(1));
+        assertEquals(1.0, series.getY(0));
+        assertEquals(2.0, series.getY(1));
         assertEquals(2, series.getItemCount());
     }
 
@@ -534,7 +528,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testDelete() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.add(1.0, 1.1);
         s1.add(2.0, 2.2);
         s1.add(3.0, 3.3);
@@ -556,7 +550,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testGetMinX() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         assertTrue(Double.isNaN(s1.getMinX()));
 
         s1.add(1.0, 1.1);
@@ -580,7 +574,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testGetMaxX() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         assertTrue(Double.isNaN(s1.getMaxX()));
 
         s1.add(1.0, 1.1);
@@ -604,7 +598,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testGetMinY() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         assertTrue(Double.isNaN(s1.getMinY()));
 
         s1.add(1.0, 1.1);
@@ -628,7 +622,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testGetMaxY() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         assertTrue(Double.isNaN(s1.getMaxY()));
 
         s1.add(1.0, 1.1);
@@ -654,7 +648,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testGetMaxY2() {
-        XYSeries series = new XYSeries(1, true, false);
+        XYSeries<Integer> series = new XYSeries<>(1, true, false);
         series.addOrUpdate(1, 20);
         series.addOrUpdate(2, 30);
         series.addOrUpdate(3, 40);
@@ -668,7 +662,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testClear() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.add(1.0, 1.1);
         s1.add(2.0, 2.2);
         s1.add(3.0, 3.3);
@@ -688,7 +682,7 @@ public class XYSeriesTest {
      */
     @Test
     public void testUpdateByIndex() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.add(1.0, 1.1);
         s1.add(2.0, 2.2);
         s1.add(3.0, 3.3);
@@ -696,7 +690,7 @@ public class XYSeriesTest {
         assertEquals(1.1, s1.getMinY(), EPSILON);
         assertEquals(3.3, s1.getMaxY(), EPSILON);
 
-        s1.updateByIndex(0, new Double(-5.0));
+        s1.updateByIndex(0, -5.0);
         assertEquals(-5.0, s1.getMinY(), EPSILON);
         assertEquals(3.3, s1.getMaxY(), EPSILON);
 
@@ -718,22 +712,22 @@ public class XYSeriesTest {
      */
     @Test
     public void testUpdateByIndex2() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.add(1.0, Double.NaN);
 
         assertTrue(Double.isNaN(s1.getMinY()));
         assertTrue(Double.isNaN(s1.getMaxY()));
 
-        s1.updateByIndex(0, new Double(1.0));
+        s1.updateByIndex(0, 1.0);
         assertEquals(1.0, s1.getMinY(), EPSILON);
         assertEquals(1.0, s1.getMaxY(), EPSILON);
 
-        s1.updateByIndex(0, new Double(2.0));
+        s1.updateByIndex(0, 2.0);
         assertEquals(2.0, s1.getMinY(), EPSILON);
         assertEquals(2.0, s1.getMaxY(), EPSILON);
 
         s1.add(-1.0, -1.0);
-        s1.updateByIndex(0, new Double(0.0));
+        s1.updateByIndex(0, 0.0);
         assertEquals(0.0, s1.getMinY(), EPSILON);
         assertEquals(2.0, s1.getMaxY(), EPSILON);
     }
@@ -743,12 +737,12 @@ public class XYSeriesTest {
      */
     @Test
     public void testUpdateByIndex3() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.add(1.0, 1.1);
         s1.add(2.0, 2.2);
         s1.add(3.0, 3.3);
 
-        s1.updateByIndex(1, new Double(2.05));
+        s1.updateByIndex(1, 2.05);
         assertEquals(1.1, s1.getMinY(), EPSILON);
         assertEquals(3.3, s1.getMaxY(), EPSILON);
     }
@@ -758,30 +752,30 @@ public class XYSeriesTest {
      */
     @Test
     public void testUpdateXY() {
-        XYSeries s1 = new XYSeries("S1");
+        XYSeries<String> s1 = new XYSeries<>("S1");
         s1.add(1.0, Double.NaN);
 
         assertTrue(Double.isNaN(s1.getMinY()));
         assertTrue(Double.isNaN(s1.getMaxY()));
 
-        s1.update(new Double(1.0), new Double(1.0));
+        s1.update(1.0, 1.0);
         assertEquals(1.0, s1.getMinY(), EPSILON);
         assertEquals(1.0, s1.getMaxY(), EPSILON);
 
-        s1.update(new Double(1.0), new Double(2.0));
+        s1.update(1.0, 2.0);
         assertEquals(2.0, s1.getMinY(), EPSILON);
         assertEquals(2.0, s1.getMaxY(), EPSILON);
     }
 
     @Test
     public void testSetKey() {
-        XYSeries s1 = new XYSeries("S");
+        XYSeries<String> s1 = new XYSeries<>("S");
         s1.setKey("S1");
         assertEquals("S1", s1.getKey());
         
-        XYSeriesCollection c = new XYSeriesCollection();
+        XYSeriesCollection<String> c = new XYSeriesCollection<>();
         c.addSeries(s1);
-        XYSeries s2 = new XYSeries("S2");
+        XYSeries<String> s2 = new XYSeries<>("S2");
         c.addSeries(s2);
         
         // now we should be allowed to change s1's key to anything but "S2"
